# asciidoc-fake-parser

./: README.adoc  README.json  afp.py  pyproject.toml
afp/: __init__.py
afp/utils/: grep.py
